add shortcuts for dipole source subscript

--- a/soundfield.sty
+++ b/soundfield.sty
@@ -529,6 +529,8 @@ area, kx, ky, kz}{diff}
   {pos, normal, driving, cylphi, sphtheta, sphphi, pressure, kvec, N}{pw}
 \sfextendsymbol[subscript=ps]
   {pos, normal, driving, pressure, sphr, sphtheta, sphphi, N}{ps}
+\sfextendsymbol[subscript=dps]
+  {pos, normal, driving, pressure, sphr, sphtheta, sphphi, N}{dps}
 \sfextendsymbol[subscript=ls]{pos, normal, driving, pressure,cylr, cylphi}{ls}
 \sfextendsymbol[subscript=fs]
   {pos, normal, driving, greens, density, inh, hom, set, N}{fs}
