extend sphtheta and sphphi about diff and sec

--- a/soundfield.sty
+++ b/soundfield.sty
@@ -505,8 +505,8 @@
 \sfextendsymbol[prefix=pwd]{normal, greens, driving, hrtf, virtualsource}{pwd}
 
 %%% Differential Operators %%%
-\sfextendsymbol[prefix=differential]{x, y, z, cylr, cylphi, sphr, t, volume, 
-area, line, kx, ky, kz}{diff}
+\sfextendsymbol[prefix=differential]{x, y, z, cylr, cylphi, sphr, sphphi, 
+  sphtheta, t, volume, area, line, kx, ky, kz}{diff}
 \sfextendsymbol[prefix=pdiff]{x, y, z, cylr, cylphi, sphr, sphphi, sphtheta}%
 {pdiff}
 \sfextendsymbol[prefix=pdifftwo]{x, y, z, cylr, cylphi, sphr, sphphi, sphtheta}%
@@ -543,7 +543,7 @@ area, line, kx, ky, kz}{diff}
 \sfextendsymbol[subscript=sec]{pos, normal, greens, select, 
   driving, set, boundary, area, volume, line, areadiff, volumediff, linediff, 
   laplace, xdiff,ydiff,zdiff,x,y,z, cylrdiff, cylphidiff, cylr, cylphi, sphr, 
-  sphphi, sphrdiff}{sec}
+  sphrdiff, sphphi, sphphidiff, sphtheta, sphthetadiff}{sec}
 \sfextendsymbol[subscript=local]{pos, normal, driving, select, set, boundary, 
   area, volume, areadiff, volumediff, cylr, cylphi, sphr, sphphi, sphtheta, 
   sphrdiff, N}{local}
