add HOA and NFCHOA superscript

--- a/soundfield.sty
+++ b/soundfield.sty
@@ -466,6 +466,8 @@
 %% Techniques
 \sfnewkeychoice{superscript}{WFS}{\mathrm{WFS}}
 \sfnewkeychoice{superscript}{LWFS}{\mathrm{LWFS}}
+\sfnewkeychoice{superscript}{HOA}{\mathrm{HOA}}
+\sfnewkeychoice{superscript}{NFCHOA}{\mathrm{NFCHOA}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%% List of Superscript derived from Elementary Symbols %%%%
