add t for tangent vector

--- a/soundfield.sty
+++ b/soundfield.sty
@@ -240,6 +240,7 @@
 \sfnewprefix{vec}{\mathbf}
 \sfnewsymbol[prefix=vec]{pos}{x}  % position vector
 \sfnewsymbol[prefix=vec]{normal}{n}  % normal vector
+\sfnewsymbol[prefix=vec]{tangent}{t}  % tangent vector
 \sfnewsymbol[prefix=vec]{origin}{0}  % coordinate's origin
 \sfnewsymbol[prefix=vec]{unit}{u}  % unit vector
 
@@ -548,7 +549,7 @@
 \sfextendsymbol[subscript=twohalfD]{pressure, driving}{twohalfD}
 \sfextendsymbol[subscript=threeD]{greens, driving}{threeD}
 %% Domains %%
-\sfextendsymbol[subscript=sec]{pos, normal, greens, select, 
+\sfextendsymbol[subscript=sec]{pos, normal, tangent, greens, select, 
   driving, set, boundary, area, volume, line, areadiff, volumediff, linediff, 
   laplace, xdiff,ydiff,zdiff,x,y,z, cylrdiff, cylphidiff, cylr, cylphi, sphr, 
   sphrdiff, sphphi, sphphidiff, sphtheta, sphthetadiff}{sec}
