add normalisation as prefix

--- a/soundfield.sty
+++ b/soundfield.sty
@@ -364,6 +364,9 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%% List of elementary Prefixes %%%%
 
+%%% Normalisation %%%
+\sfnewprefix{norm}{\hat}
+
 %%% Transforms %%%
 %% Temporal %%
 \sfnewprefix{time}{\MakeLowercase}
@@ -572,3 +575,4 @@
 \sfextendsymbol[subscript=scatter]{pressure}{sc}
 \sfextendsymbol[subscript=incoming]{pressure}{in}
 \sfextendsymbol[subscript=pre]{filter}{pre}
+\sfextendsymbol[prefix=norm]{f, k, kvec}{norm}
