change style local index to mathrm

--- a/soundfield.sty
+++ b/soundfield.sty
@@ -406,7 +406,7 @@
 \sfnewkeychoice{subscript}{fs}{\mathrm{fs}}  % focused source
 \sfnewkeychoice{subscript}{ls}{\mathrm{ls}}  % line source
 %% Domains %%
-\sfnewkeychoice{subscript}{local}{l}  % local domain
+\sfnewkeychoice{subscript}{local}{\mathrm{l}}  % local domain
 \sfnewkeychoice{subscript}{sec}{0}  % loudspeaker domain
 \sfnewkeychoice{subscript}{wc}{\{\mathrm{0},l\}}  % wildcard for both
 \sfnewkeychoice{subscript}{interior}{\mathrm i}  % interior domain
