add extensions for sampling and truncation

--- a/soundfield.sty
+++ b/soundfield.sty
@@ -527,7 +527,7 @@
 \sfextendsymbol[subscript=possec]{grad, laplace}{possec}  % w.r.t. x0
 
 %%% Error %%%
-\sfextendsymbol[subscript=err]{pressure}{err}
+\sfextendsymbol[subscript=err]{pressure}{err} 
 
 %%% Sound Field Synthesis %%%
 
@@ -576,3 +576,5 @@
 \sfextendsymbol[subscript=incoming]{pressure}{in}
 \sfextendsymbol[subscript=pre]{filter}{pre}
 \sfextendsymbol[prefix=norm]{f, k, kvec}{norm}
+\sfextendsymbol[superscript=sampled]{driving, f, fnorm}{S}
+\sfextendsymbol[superscript=truncated]{driving, f, fnorm}{tr}
