add constant time and sampling subscript

--- a/soundfield.sty
+++ b/soundfield.sty
@@ -265,6 +265,7 @@
 \sfnewsymbol{omega}{\omega}  % angular frequency
 \sfnewsymbol{f}{f}  % temporal frequency
 \sfnewsymbol{t}{t}  % time
+\sfnewsymbol{T}{T}  % constant time
 
 %%% Set Theory, Areas and Boundaries %%%
 
@@ -429,6 +430,7 @@
 \sfnewkeychoice{subscript}{incoming}{\mathrm{in}}  % incoming
 \sfnewkeychoice{subscript}{scatter}{\mathrm{sc}}  % scattered
 \sfnewkeychoice{subscript}{pre}{\mathrm{pre}}  % pre
+\sfnewkeychoice{subscript}{samp}{\mathrm{s}}  % sampling
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%% List of Subscript derived from Elementary Symbols %%%%
@@ -585,6 +587,7 @@
 %%% Others %%%
 \sfextendsymbol[subscript=c]{pos, normal, driving, circle, set, R}{c}
 \sfextendsymbol[subscript=ref]{pos, sphr}{ref}
+\sfextendsymbol[subscript=samp]{f, omega, T}{samp}
 \sfextendsymbol[subscript=scatter]{pressure}{sc}
 \sfextendsymbol[subscript=incoming]{pressure}{in}
 \sfextendsymbol[subscript=pre]{filter}{pre}
