extend N about sec subscript

--- a/soundfield.sty
+++ b/soundfield.sty
@@ -565,7 +565,7 @@
 \sfextendsymbol[subscript=sec]{pos, normal, tangent, greens, select, 
   driving, set, boundary, area, volume, line, areadiff, volumediff, linediff, 
   laplace, xdiff,ydiff,zdiff,x,y,z, cylrdiff, cylphidiff, cylr, cylphi, sphr, 
-  sphrdiff, sphphi, sphphidiff, sphtheta, sphthetadiff}{sec}
+  sphrdiff, sphphi, sphphidiff, sphtheta, sphthetadiff, N}{sec}
 \sfextendsymbol[subscript=local]{pos, normal, driving, select, set, boundary, 
   area, volume, areadiff, volumediff, cylr, cylphi, sphr, sphphi, sphtheta, 
   sphrdiff, N, circle, R}{local}
