add 2D contour and region

--- a/soundfield.sty
+++ b/soundfield.sty
@@ -273,6 +273,9 @@
 \sfnewsymbol{boundary}{\partial \Omega}
 \sfnewsymbol{volume}{V}
 \sfnewsymbol{area}{A}
+
+\sfnewsymbol{region}{\mathcal S}
+\sfnewsymbol{contour}{\partial {\mathcal S}}
 \sfnewsymbol{circle}{\mathcal{C}}  % circular area
 \sfnewsymbol{R}{R}  % radius of circular area
 \sfnewsymbol{line}{l}
@@ -568,7 +571,7 @@
   sphrdiff, sphphi, sphphidiff, sphtheta, sphthetadiff, N}{sec}
 \sfextendsymbol[subscript=local]{pos, normal, driving, select, set, boundary, 
   area, volume, areadiff, volumediff, cylr, cylphi, sphr, sphphi, sphtheta, 
-  sphrdiff, N, circle, R}{local}
+  sphrdiff, N, circle, R, region, contour}{local}
 \sfextendsymbol[subscript=h]{pos, cylphi}{h}
 %% HRTFs and BRTFs %%
 \sfextendsymbol[subscript=left]{hrtf, brtf}{left}
