--- a/soundfield.sty
+++ b/soundfield.sty
@@ -251,6 +251,7 @@
 \sfnewsymbol{k}{k}
 \sfnewsymbol{kappa}{\kappa}
 \sfnewsymbol{kappaprime}{\kappa'}
+\sfnewsymbol{kvecnorm}{\hat{\mathbf{k}}}
 %\sfnewsymbol{kappa}{\sqrt{\left(\frac \omega c\right)^2 - k_x^2 - k_y^2}}
 %\sfnewsymbol{kappaprime}{\sqrt{k_x^2 + k_y^2 - \left(\frac \omega c\right)^2}}
 %% Spatio-Frequency Domain in Polar Coordinates %%
@@ -603,6 +604,6 @@
 \sfextendsymbol[subscript=scatter]{pressure}{sc}
 \sfextendsymbol[subscript=incoming]{pressure}{in}
 \sfextendsymbol[subscript=pre]{filter}{pre}
-\sfextendsymbol[prefix=norm]{f, k, kvec}{norm}
+\sfextendsymbol[prefix=norm]{f, k}{norm}
 \sfextendsymbol[superscript=sampled]{driving, f, fnorm}{S}
 \sfextendsymbol[superscript=truncated]{driving, f, fnorm}{tr}
