extend f and fnorm about sbl superscript

--- a/soundfield.sty
+++ b/soundfield.sty
@@ -621,6 +621,6 @@
 \sfextendsymbol[prefix=norm]{f, k}{norm}
 \sfextendsymbol[superscript=sampled]{driving, f, fnorm}{S}
 \sfextendsymbol[superscript=truncated]{driving, f, fnorm}{tr}
-\sfextendsymbol[superscript=sbl]{virtualsource, driving}{B}
+\sfextendsymbol[superscript=sbl]{virtualsource, driving, f, fnorm}{B}
 \sfextendsymbol[superscript=shift]{pos, possec}{shift}
 \sfextendsymbol[superscript=spp]{pos, x}{spp}
