add cylphi to subscripts

--- a/soundfield.sty
+++ b/soundfield.sty
@@ -449,6 +449,7 @@
 \sflinkkeychoice{subscript}{z}{z}
 %% Cylindrical Coordinates Subscript
 \sflinkkeychoice{subscript}{cylr}{cylr}
+\sflinkkeychoice{subscript}{cylphi}{cylphi}
 %% Spherical Coordinates Subscript
 \sflinkkeychoice{subscript}{sphr}{sphr}
 %% Wave Number Domain Subscript
@@ -624,3 +625,9 @@
 \sfextendsymbol[superscript=sbl]{virtualsource, driving, f, fnorm}{B}
 \sfextendsymbol[superscript=shift]{pos, possec}{shift}
 \sfextendsymbol[superscript=spp]{pos, x}{spp}
+
+%% Distances %%
+\sfextendsymbol[subscript=x]{delta}{x}
+\sfextendsymbol[subscript=y]{delta}{y}
+\sfextendsymbol[subscript=z]{delta}{z}
+\sfextendsymbol[subscript=cylphi]{delta}{cylphi}
