add symbol for wavelength and SPA subscript

--- a/soundfield.sty
+++ b/soundfield.sty
@@ -246,7 +246,6 @@
 
 %%% Frequency Domain %%%
 
-\sfnewsymbol{wc}{k}
 %% Spatio-Frequency Domain in Cartesian Coordinates %%
 \sfnewsymbol{k}{k}
 \sfnewsymbol{kappa}{\kappa}
@@ -265,6 +264,10 @@
 %% Time-Frequency Domain %%
 \sfnewsymbol{omega}{\omega}  % angular frequency
 \sfnewsymbol{f}{f}  % temporal frequency
+
+%% Misc.
+\sfnewsymbol{wc}{k}  % wavenumber
+\sfnewsymbol{wl}{\lambda}  % wavelength
 \sfnewsymbol{t}{t}  % time
 \sfnewsymbol{T}{T}  % constant time
 
@@ -439,6 +442,7 @@
 \sfnewkeychoice{subscript}{scatter}{\mathrm{sc}}  % scattered
 \sfnewkeychoice{subscript}{pre}{\mathrm{pre}}  % pre
 \sfnewkeychoice{subscript}{samp}{\mathrm{s}}  % sampling
+\sfnewkeychoice{subscript}{spa}{\mathrm{SPA}}  % stationary phase approximation
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%% List of Subscript derived from Elementary Symbols %%%%
