extend region and boundary about subscript=h

--- a/soundfield.sty
+++ b/soundfield.sty
@@ -601,7 +601,8 @@
 \sfextendsymbol[subscript=local]{pos, normal, driving, select, set, boundary, 
   area, volume, areadiff, volumediff, cylr, cylphi, sphr, sphphi, sphtheta, 
   sphrdiff, N, circle, R, region, contour}{local}
-\sfextendsymbol[subscript=h]{pos, cylphi, circle, set, normal, R}{h}
+\sfextendsymbol[subscript=h]{pos, cylphi, circle, set, boundary, 
+  region, contour, normal, R}{h}
 %% HRTFs and BRTFs %%
 \sfextendsymbol[subscript=left]{hrtf, brtf}{left}
 \sfextendsymbol[subscript=right]{hrtf, brtf}{right}
