add sets of numbers

--- a/soundfield.sty
+++ b/soundfield.sty
@@ -284,6 +284,12 @@
 \sfnewsymbol{R}{R}  % radius of circular area
 \sfnewsymbol{line}{l}
 
+%% Sets of numbers
+\sfnewsymbol{complex}{\mathbb C}
+\sfnewsymbol{real}{\mathbb R}
+\sfnewsymbol{int}{\mathbb Z}
+\sfnewsymbol{natural}{\mathbb N}
+
 %%% Special Functions %%%
 
 %% spherical Basis function
